# caspi

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users.py  001_initial_tables.py  002_add_source_identifier.py  002_create_core_entities.py  003_add_sharing_rules.py  003_create_scraper_credentials.py  004_add_projects.py  005_add_merchant_aliases.py  006_remove_projects.py  007_jsonb_tags_extra.py  008_add_merchant_tags.py  009_align_extra_original_amount_signs.py  010_drop_sharing_rules.py  011_tags_merchants_collections.py
backend/src/caspi/: app.py  public_request_url.py  settings.py
backend/src/caspi/application/: auto_scrape.py  bulk_scrape_isracard.py  scrape_isracard.py
backend/src/caspi/application/collections/: stats.py
backend/src/caspi/application/payments/: aggregate_full_tag_slices.py  aggregate_month_tag_slices.py  aggregate_summary.py  read.py  response_mapper.py  update.py
backend/src/caspi/domain/entities/: __init__.py  category.py  import_batch.py  merchant_rule.py  payment.py  project.py  sharing_rule.py
backend/src/caspi/domain/events/: __init__.py  domain_events.py
backend/src/caspi/infrastructure/: database.py  models.py
backend/src/caspi/interfaces/: app.py  auth_middleware.py  dependencies.py  schemas.py
backend/src/caspi/services/: credential_service.py  import_service.py
backend/tests/: conftest.py  test_health.py
backend/tests/application/: test_bulk_scrape_isracard.py  test_bulk_scrape_stream.py  test_full_tag_slices.py  test_month_tag_slices.py  test_scrape_isracard.py
backend/tests/domain/: test_categorization_service.py  test_money.py  test_payment.py  test_shared_payment.py
backend/tests/interfaces/: test_payment_summary.py  test_scrape_bulk.py
(+127 files in other folders)
